--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Streamlit Cloud Requirements - Minimal for Demo
+# Streamlit Cloud Requirements - Full version
 # Python 3.11 compatible
 
 streamlit==1.29.0
@@ -8,6 +8,18 @@ plotly==5.18.0
 python-dotenv==1.0.0
 requests==2.31.0
 
-# Note: Heavy ML dependencies (sentence-transformers, torch, chromadb)
-# are optional and only needed for full functionality
-# The app will run in demo mode without them
+# For embeddings - using latest compatible versions
+sentence-transformers==3.0.1
+transformers==4.44.0
+torch==2.1.0
+tokenizers==0.19.1
+huggingface-hub==0.24.0
+
+# Vector database
+chromadb==0.4.22
+
+# AWS (for Claude)
+boto3==1.34.14
+
+# Other dependencies
+tiktoken==0.5.1
