--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-# Streamlit Cloud Requirements - Full version
+# Streamlit Cloud Requirements - Minimal version
 # Python 3.11 compatible
+# Heavy ML dependencies removed for faster deployment
 
 streamlit==1.29.0
 pandas==2.2.3
@@ -8,18 +9,14 @@ plotly==5.18.0
 python-dotenv==1.0.0
 requests==2.31.0
 
-# For embeddings - using latest compatible versions
-sentence-transformers==3.0.1
-transformers==4.44.0
-torch==2.1.0
-tokenizers==0.19.1
-huggingface-hub==0.24.0
-
-# Vector database
-chromadb==0.4.22
-
-# AWS (for Claude)
+# AWS (optional - for Claude if you have credentials)
 boto3==1.34.14
 
-# Other dependencies
+# Text processing
 tiktoken==0.5.1
+
+# Note: The app will run in lite/demo mode without:
+# - sentence-transformers
+# - torch/torchvision
+# - chromadb
+# These can be added later for full functionality
